--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5 wow animate__animated animate__bounceIn" src="https://i.imgur.com/wtqqImu.png" alt="NuciCraft" />
+                <img class="masthead-avatar mb-5 wow animate__animated animate__bounceIn" src="https://raw.githubusercontent.com/hmlendea/nucilandia/master/Coat%20of%20Arms/Coat%20of%20Arms.svg" alt="NuciCraft" />
                 <!-- Masthead Subheading-->
                 <span class="skills">
                     <p class="text-center typewrite" data-period="2000" data-type='[ "Minecraft server", "Definitely not a cult", "Trolls", "We love buckets", "In Ciupitu we trust!", "Poți fugi dar nu te poți ascunde", "Am descoperit Găletida!" ]'>
