Updated WebMap URL

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <p><i class="fa-solid fa-earth-europe"></i> Harta Lumii:</p>
                     </div>
                     <div class="col-lg-4 mr-auto wow animate__animated animate__slideInRight">
-                        <p><a href="http://nucicraft.duckdns.org:25550" target="_blank">http://nucicraft.duckdns.org:25550</a></p>
+                        <p><a href="https://hmlendea.go.ro/nucicraft/webmap/" target="_blank">https://hmlendea.go.ro/nucicraft/webmap/</a></p>
                     </div>
                 </div>
                 <div class="row">
