Added a donation link

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto wow animate__animated animate__slideInLeft">
+                        <p><i class="fa-solid fa-gift"></i> Donații:</p>
+                    </div>
+                    <div class="col-lg-4 mr-auto wow animate__animated animate__slideInRight">
+                        <p><a href="https://hmlendea.go.ro/donate" target="_blank">https://hmlendea.go.ro/donate</a></p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 ml-auto wow animate__animated animate__slideInLeft">
                         <p><i class="fa-solid fa-gamepad"></i> Minecraft Launcher:</p>
                     </div>
                     <div class="col-lg-4 mr-auto wow animate__animated animate__slideInRight">
