--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto wow animate__animated animate__slideInLeft">
+                        <p><i class="fas fa-server"></i> Server:</p>
+                    </div>
+                    <div class="col-lg-4 mr-auto wow animate__animated animate__slideInRight">
+                        <p>mc.nucilandia.ro</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 ml-auto wow animate__animated animate__slideInLeft">
                         <p><i class="fas fa-brands fa-discord"></i> Discord:</p>
                     </div>
                     <div class="col-lg-4 mr-auto wow animate__animated animate__slideInRight">
@@ -86,7 +94,7 @@
                         <p><i class="fa-solid fa-earth-europe"></i> Harta Lumii:</p>
                     </div>
                     <div class="col-lg-4 mr-auto wow animate__animated animate__slideInRight">
-                        <p><a href="https://hmlendea.go.ro/nucicraft/webmap/" target="_blank">https://hmlendea.go.ro/nucicraft/webmap/</a></p>
+                        <p><a href="https://mc.nucilandia.ro/nucicraft/webmap/" target="_blank">https://mc.nucilandia.ro/nucicraft/webmap/</a></p>
                     </div>
                 </div>
                 <div class="row">
