discord-url: Dynamic link for the Discord invidation

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Text-->
-                                    <p>Chat-ul din joc este legat de cel de pe <a href="https://discord.gg/bE4v4zmHm2">Discord</a>, ceea ce înseamnă că toate mesajele vor apărea în ambele locuri.</p>
+                                    <p>Chat-ul din joc este legat de cel de pe <a href="links/discord">Discord</a>, ceea ce înseamnă că toate mesajele vor apărea în ambele locuri.</p>
                                     <p><strong>Legarea jucătorului din Minecraft cu contul de Discord:</strong></p>
                                     <ul class="list-inline item-details">
                                         <li>În Minecraft, scrie comanda: <strong>/discordsrv link</strong> și ține minte codul numeric primit</li>
@@ -158,7 +158,7 @@
                                     <p>Exemplu <strong>telefon:</strong></p>
                                     <img src="https://i.imgur.com/QwGQSIc.png">
                                     <div class="text-center mt-4 wow animate__animated animate__bounceIn">
-                                        <a class="btn btn-lg btn-outline-dark" href="https://discord.gg/bE4v4zmHm2"><i class="fa-brands fa-discord"></i>Join NuciLandia on Discord</a>
+                                        <a class="btn btn-lg btn-outline-dark" href="links/discord-invitation"><i class="fa-brands fa-discord"></i>Join NuciLandia on Discord</a>
                                     </div>
                                     <br>
                                     <button class="btn btn-primary" data-dismiss="modal">
