--- a/links/vote-topminecraftservers.html
+++ b/links/vote-topminecraftservers.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://minecraft-mp.com/server/329223/vote" />
+<meta http-equiv="refresh" content="0; url=https://topminecraftservers.org/server/36792" />
